# CherryPip

./: .gitattributes  CMakeLists.txt  HelloTriangle.cpp  HelloTriangle.h  Helper.h  PLAN.md  README.md  Win32App.cpp  Win32App.h  d3dx12.h  main.cpp
Apps/: App.cpp  App.h
Apps/HelloTriangle/Headers/: HelloTriangle.h
Apps/HelloTriangle/src/: HelloTriangle.cpp
Apps/ModelLoading/Headers/: ModelLoading.h
Apps/ModelLoading/src/: ModelLoading.cpp
Apps/PathTracer/Headers/: PathTracer.h
Apps/PathTracer/src/: PathTracer.cpp
Apps/RasterViewer/Headers/: RasterViewer.h
Apps/RasterViewer/src/: RasterViewer.cpp
Apps/SpinningCube/Headers/: SpinningCube.h
Apps/SpinningCube/src/: SpinningCube.cpp
Apps/TextureCube/Headers/: TextureCube.h
Apps/TextureCube/src/: TextureCube.cpp
Assets/Models/: Cube.glb  floatplane.glb
Assets/Models/Cornell/: scene.gltf
Assets/Models/Madeline/: Backpack_N.tga  Backpack_RGH.tga  Eye_D2.tga  Eye_N.tga  Eye_RGH.tga  Eye_RGH2.tga  Eye_SPC.tga  Eye_SPC2.tga  Hair_D.tga  Hair_D2.tga  Jacket_D.tga  Jacket_N.tga  Jacket_SPC.tga  Madeline.glb  Pants_D2.tga  Shoes_D.tga  Shoes_N.tga  Shoes_RGH.tga  Skin_D.tga  Skin_RGH.tga  Skin_SPC2.tga  backpack-alpha.tga  pants-rgh.tga  pants-spc.tga
Assets/Models/Madeline/Assets/Textures/: Backpack_D.tga  Backpack_SPC.tga  Eye_D.tga  Eye_EMM.tga  Eye_EMM2.tga  Hair_RGH.tga  Hair_SPC.tga  Jacket_D2.tga  Jacket_RGH.tga  Pants_D.tga  Shoes_D2.tga  Shoes_RGH (1).tga  Shoes_SPC.tga  Skin_D2.tga  Skin_RGH2.tga  Skin_SPC.tga
Assets/Resources/: CherryPip.rc
Assets/Shaders/: Basic3D_GltfPS.hlsl  Basic3D_GltfVS.hlsl  Basic3D_NormalsPS.hlsl  Basic3D_NormalsVS.hlsl  Basic3D_TexPS.hlsl  Basic3D_TexVS.hlsl  CreateMipMapsCS.hlsl  DebugPalette.hlsli  FullScreenTriangleVS.hlsl  Rand01.hlsli
Assets/Shaders/DualIncludes/: CBV.h  HlslGlue.h  PTBuffers.h
Assets/Shaders/Path-Tracing/: AccumCS.hlsl  CorePS.hlsl  Hit.hlsli  HitPS.hlsli  Miss.hlsli  TestPS.hlsl
Assets/Textures/: DefaultNormal.tga
Headers/: Helper.h  MathUtils.h
Headers/App/: HelloTriangle.h
Headers/DualIncludes/: CBV.h  HlslGlue.h
Headers/client/Debug/: GPUEventScoped.h
Headers/client/HWI/: BLAS.h  D12Resource.h  D3D.h  Heap.h  Material.h  Model.h  RootSig.h  Shader.h  TLAS.h  Texture.h
Headers/client/Render/: Camera.h  CameraController.h  Object.h  PathTracingContext.h  Transform.h
Headers/client/System/: Config.h  DebugOutputRedirector.h  Engine.h  FileHelper.h  Gui.h  HighResolutionClock.h  HotReloader.h  Input.h  Keycodes.h  ModelLoaderGLTF.h  ModelLoaderGLTF.h~  TextureLoader.h  Win32App.h
Notes/: PLAN.md
src/: MathUtils.cpp  main.cpp
src/App/: HelloTriangle.cpp
src/client/Debug/: GPUEventScoped.cpp
src/client/HWI/: BLAS.cpp  D12Resource.cpp  D3D.cpp  Heap.cpp  Material.cpp  Model.cpp  RootSig.cpp  Shader.cpp  TLAS.cpp  Texture.cpp
src/client/Render/: Camera.cpp  CameraController.cpp  Object.cpp  PathTracingContext.cpp  Transform.cpp
src/client/System/: Config.cpp  Engine.cpp  FileHelper.cpp  Gui.cpp  HighResolutionClock.cpp  HotReloader.cpp  Input.cpp  ModelLoaderGLTF.cpp  TextureLoader.cpp  Win32App.cpp
